Small interface & styling update.

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,7 @@
 $primary: #EC6194;
 $success: #85A127;
 $warning: #FFD800;
+
+
+$form-range-track-bg:    rgba($primary,0.25);
+$form-range-thumb-width: 1.5rem;
