--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -41,10 +41,7 @@
 @import "../node_modules/bootstrap/scss/spinners";
 @import "../node_modules/bootstrap/scss/offcanvas";
 @import "../node_modules/bootstrap/scss/placeholders";
-
-// Helpers
 @import "../node_modules/bootstrap/scss/helpers";
-
-// Utilities
 @import "../node_modules/bootstrap/scss/utilities/api";
-// scss-docs-end import-stack
+
+@import "input.scss";
